--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
-<!--x Made without CSS frameworks (like Bootstrap) because disired styling is too specific -->
+<!--x Modified from another project - https://github.com/jh1662/LMC_simulator_game/blob/main/index.html -->
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/commons.css">
-        <title>Home</title>
-    </head>
-    <body>
-        <header>
-
-            <nav>
-
-
-            </nav>
-        </header>
-        <section>
-            <p class="box">Hello World</p>
-            <nav>
-
-            </nav>
-        </section>
-        <footer>
-            <nav>
-
-            </nav>
-        </footer>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1; url=./src/pages/home.html">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, then <a href="./src/pages/home.html">click here</a>.</p>
+</body>
 </html>
