--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,4 +1,4 @@
-<!--x Made without CSS frameworks (like Bootstrap) because disired styling is too specific -->
+<!--#region start-->
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
     <head>
@@ -11,17 +11,25 @@
         <header id="header">
             <nav class="top">
                 <a href="./home.html">Home</a>
-                <a href="./projects">Past projects</a>
+                <a href="./projects">Projects</a>
                 <a href="./awards">Experiance & Qualifications</a>
                 <a href="./cV">View CV as PDF</a>
             </nav>
         </header>
+<!--#endregion-->
         <section>
-            <p class="box"><b>Personal Statement:</b><br><br>Motivated person studying Computer Science, I enjoy doing things as efficiently as possible with a keen eye on details. I have a lot of experience talking and cooperating with a variety of people from leadership groups to charity work. This makes me a person for interacting with people, getting what they truly want, and forming customer relations. Doing computing lets me plan and tackle many challenges, making me one with good problem-solving skills. Especially involving data manipulation for real-world problems.
+            <p class="box"><b>Personal Statement:</b><br><br>
+                Motivated person studying Computer Science, I enjoy doing things as efficiently as possible with a keen eye on details. I have a lot of experience talking and cooperating with a variety of people from leadership groups to charity work. This makes me a person for interacting with people, getting what they truly want, and forming customer relations. Doing computing lets me plan and tackle many challenges, making me one with good problem-solving skills. Especially involving data manipulation for real-world problems.
             </p>
-            <p class="box"><b>Featured Accomplishment:</b><br><br>I am going to do computer science master's degree at Kent University.</p>
-            <p class="box"><b>Notice:</b><br><br>Socials and 3rd party contact links are listed in the<a href="#footer">footer.</a></p>
+            <p class="box"><b>Featured Accomplishment:</b><br><br>
+                I am going to do computer science master's degree at Kent University.
+            </p>
+            <p class="box"><b>Notice:</b><br><br>
+                Socials and 3rd party contact links are listed in the
+                <a href="#footer">footer.</a>
+            </p>
         </section>
+<!--#region end-->
         <footer id="footer" class="bottom">
             <table>
                 <tr>
@@ -37,3 +45,4 @@
         </footer>
     </body>
 </html>
+<!--#endregion-->
